- fixed rest requests;  - added usage of $resource;